@@ -66,15 +66,3 @@ jobs:
         asset_path: ./dist/fmcsadmin-${{ steps.version.outputs.version }}-windows-x64.zip
         asset_name: fmcsadmin-${{ steps.version.outputs.version }}-windows-x64.zip
         asset_content_type: application/zip
-
-    - name: Upload Release Asset for Windows (x32)
-      id: upload-release-asset-for-windows-x32
-      uses: actions/upload-release-asset@v1.0.2
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/fmcsadmin-${{ steps.version.outputs.version }}-windows-x32.zip
-        asset_name: fmcsadmin-${{ steps.version.outputs.version }}-windows-x32.zip
-        asset_content_type: application/zip
